RESOLVED FIXED263205
[IFC] Leading trimmable whitespace should not block placing subsequent content on current line
https://bugs.webkit.org/show_bug.cgi?id=263205
Summary [IFC] Leading trimmable whitespace should not block placing subsequent conten...
alan
Reported 2023-10-16 11:44:19 PDT
ssia
Attachments
Patch (5.02 KB, patch)
2023-10-16 11:47 PDT, alan
no flags
Patch (9.63 KB, patch)
2023-10-16 19:37 PDT, alan
no flags
[fast-cq]Patch (9.67 KB, patch)
2023-10-17 07:28 PDT, alan
no flags
alan
Comment 1 2023-10-16 11:47:03 PDT
alan
Comment 2 2023-10-16 19:37:47 PDT
alan
Comment 3 2023-10-17 07:28:51 PDT
Created attachment 468245 [details] [fast-cq]Patch
EWS
Comment 4 2023-10-17 14:03:21 PDT
Committed 269427@main (f6e862621de8): <https://commits.webkit.org/269427@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468245 [details].
Radar WebKit Bug Importer
Comment 5 2023-10-17 14:04:25 PDT
Note You need to log in before you can comment on or make changes to this bug.