[IFC] Leading trimmable whitespace should not block placing subsequent content on current line https://bugs.webkit.org/show_bug.cgi?id=263205

Reviewed by Antti Koivisto.

ContinuousContent::hasTrimmableContent returns false when the trimmable content has zero width (font-size: 0px)
It prevents us from recognizing that the candidate content is fully trimmable and other content may still be placed on the current line.

* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasTrimmableSpace const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasHangingSpace const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasTrimmableContent const): Deleted.
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasHangingContent const): Deleted.

Canonical link: https://commits.webkit.org/269427@main